--- a/OpenGLESTest/OpenGLESTest/OpenGLESTest.vcxproj
+++ b/OpenGLESTest/OpenGLESTest/OpenGLESTest.vcxproj
@@ -127,7 +127,7 @@
   <ItemGroup>
     <ClInclude Include="Common\Include\esUtil.h" />
     <ClInclude Include="Common\Include\esUtil_win.h" />
-    <ClInclude Include="myMath.h" />
+    <ClInclude Include="myUtil.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Common\Source\esShader.c" />
@@ -136,6 +136,7 @@
     <ClCompile Include="Common\Source\esUtil.c" />
     <ClCompile Include="Common\Source\Win32\esUtil_win32.c" />
     <ClCompile Include="MyObj.c" />
+    <ClCompile Include="myUtil.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
